--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-De Leon, Pocholo Nicolas Q.
+<!DOCTYPE html>
+<head>
+<title> IT0043 - TC05 </title>
+</head>
+<body>
+    <h1> De Leon, Pocholo Nicolas Q.
+    <h2> BSIT - TC05 </h2>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, adipisci. Beatae architecto ducimus possimus. Ullam commodi, ratione alias corporis voluptate atque perspiciatis tempora, doloribus reiciendis vel repudiandae cumque nemo iusto.</p>
+    </h1>
+</body>
+</html>
