--- a/DeLeon_TSA3.html
+++ b/DeLeon_TSA3.html
@@ -13,7 +13,7 @@
 
       <p class="paragraph">
         The wait is over! The <span class="spancolor">Steam Summer Sale</span> is here with unbelievable discounts on
-        the latest and greatest games. Act fast—these deals won't last long!"
+        the latest and greatest games. Act fast—these deals won't last long!
         From action-packed shooters to immersive RPGs, find the best deals on
         the most popular games.
       </p>
@@ -23,7 +23,7 @@
         <span class="spancolor">June 14th</span>. Don't miss out on this incredible
         opportunity to expand your game library, get exclusive bundles and save
         even more! Combine your favorite games into one purchase for a huge
-        discount."
+        discount.
       </p>
 
       <p class="paragraph">
