--- a/DeLeon_TSA3.html
+++ b/DeLeon_TSA3.html
@@ -29,14 +29,14 @@
       <p class="paragraph">
         This summer, save big on a wide selection of games during our annual
         <span class="spancolor">Steam Summer Sale.</span> Whether you're into
-        strategy, adventure, or indie games, there's something for everyone."
+        strategy, adventure, or indie games, there's something for everyone.
       </p>
 
       <br>
       
       <p class="p3">
-        <a href="https://store.steampowered.com" target="_blank" class="p3"
-          >Click here to visit the Steam Store and start saving!</a>
+        <a href="https://store.steampowered.com" target="_blank" class="p3">
+          Click here to visit the Steam Store and start saving!</a>
       </p>
     </div>
   </body>
